# yavdr-frontend

./: .gitignore  Makefile  README.md  config.yml  main.py  pyproject.toml
debian/: README.Debian  README.source  changelog  control  copyright  files  install  rules  yavdr-frontend-tools.install  yavdr-frontend-tools.postinst
src/yavdr_frontend/: __main__.py  basicfrontend.py  config.py  controller.py  drm_hotlug.py  frontend_manager.py  frontendctl.py  lirc.py  loghandler.py  run_desktop.py  shutdown_handler.py  startup.py  systemdfrontend.py  tools.py  vdr_controller.py
src/yavdr_frontend/frontends/: generic_vdr_frontend.py  softhdcuvid.py  softhddevice.py  softhddrm.py  softhdvaapi.py  vaapidevice.py  vaapivideo.py
src/yavdr_frontend/interfaces/: org_freedesktop_dbus.py  systemd_dbus_interface.py  systemd_unit_interface.py  vdr_plugins.py  vdr_remote.py  vdr_shutdown.py  (+3 more)
tools/: Makefile  README  wait-for-vdr-snd-release.cpp
yavdr_frontend/: __main__.py  args.py  basicfrontend.py  config.py  controller.py  frontend_dbus_send.py  frontend_manager.py  lirc.py  loghandler.py  run_desktop.py  session_bus.py  shutdown_handler.py  start_desktop.py  startup.py  system_bus.py  systemdfrontend.py  tools.py  vdr_controller.py  yavdr_frontend.py
yavdr_frontend/frontends/: generic_vdr_frontend.py  rpihddevice.py  softhddrm.py
yavdr_frontend/interfaces/: org_freedesktop_dbus.py  pulsedbusctl.py  vdr_channels.py  vdr_devices.py  vdr_epg.py  vdr_recordings.py  vdr_setup.py  vdr_skin.py  yavdr_frontend_interface.py
yavdr_frontend/protocols/: frontend_protocols.py
(+6 files in other folders)
